--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@amitgroup/microsite": "^1.0.1",
     "bootstrap": "^5.2.3",
     "jquery": "^3.6.4",
     "owl.carousel": "^2.3.4",
