--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@amitgroup/microsite": "^1.0.1",
+    "@amitgroup/microsite": "1.0.2",
     "bootstrap": "^5.2.3",
     "jquery": "^3.6.4",
     "owl.carousel": "^2.3.4",
